chore: minor adjusts and refact
